fix(POM.xml) fix tests git push